--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongodb": "1.2.7",
     "moment": "1.7.2",
     "emailjs": "0.3.3",
-    "socket.io": "*"
+    "socket.io": "*",
+    "cookie": "*",
+    "connect": "*"
   },
   "engines": {
     "node": "0.8.14",
